--- a/crossplane-packages/secret-syncer/compositions/secret-syncer-kcl-version/rendered/extensionsDir/composition.yaml
+++ b/crossplane-packages/secret-syncer/compositions/secret-syncer-kcl-version/rendered/extensionsDir/composition.yaml
@@ -76,8 +76,8 @@ spec:
                                     namespace = parameters.destination.namespace
                                 }
                                 # Get data and type from the source secret's status
-                                data = ocds["source-secret"]?.status?.atProvider?.manifest?.data
-                                type = ocds["source-secret"]?.status?.atProvider?.manifest?.type
+                                data = ocds["source-secret"]?.Resource?.status?.atProvider?.manifest?.data
+                                type = ocds["source-secret"]?.Resource?.status?.atProvider?.manifest?.type
                             }
                         }
                         managementPolicies = spec.managementPolicies
