--- a/gitops/applications/base/utils-post-config/crossplane-providers.yaml
+++ b/gitops/applications/base/utils-post-config/crossplane-providers.yaml
@@ -156,3 +156,10 @@ metadata:
   name: function-go-templating
 spec:
   package: xpkg.upbound.io/crossplane-contrib/function-go-templating:v${ARGOCD_ENV_crossplane_func_go_templating_version}
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-aws-s3
+spec:
+  package: xpkg.upbound.io/upbound/provider-aws-s3:v${ARGOCD_ENV_aws_s3_crossplane_module_version}
