--- a/gitops/applications/base/utils-post-config/crossplane-providers.yaml
+++ b/gitops/applications/base/utils-post-config/crossplane-providers.yaml
@@ -163,3 +163,10 @@ metadata:
   name: provider-aws-s3
 spec:
   package: xpkg.upbound.io/upbound/provider-aws-s3:v${ARGOCD_ENV_aws_s3_crossplane_module_version}
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-aws-iam
+spec:
+  package: xpkg.upbound.io/upbound/provider-aws-iam:v${ARGOCD_ENV_aws_iam_crossplane_module_version}
