--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - provider-config.yaml
+  - aws-provider-config.yaml
+  - kubernetes-provider-config.yaml
   - xr-definition-rds.yaml
   - composition-rds.yaml
   - xr-definition-rds-aurora.yaml
