--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/aws-provider-config.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/aws-provider-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: aws.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: crossplane-provider-config
+  name: aws-crossplane-provider-config
 spec:
   credentials:
     secretRef:
@@ -14,4 +14,16 @@ spec:
       dynamic:
         host: amazonaws.com
         protocol: https
-      type: Dynamic      
+      type: Dynamic
+---
+apiVersion: aws.upbound.io/v1beta1
+kind: ProviderConfig
+metadata:
+  name: aws-cp-upbound-provider-config
+spec:
+  credentials:
+    source: Secret
+    secretRef:
+      key: creds
+      name: secret-aws-xplane-backend-creds
+      namespace: ${ARGOCD_ENV_crossplane_namespace}
