--- a/gitops/applications/base/gitlab-pre/objectstorage.yaml
+++ b/gitops/applications/base/gitlab-pre/objectstorage.yaml
@@ -728,7 +728,7 @@ spec:
           s3:
            bucket: registry
            v4auth: true
-           regionendpoint: "http://rook-ceph-rgw-ceph-objectstore.rook-ceph.svc.cluster.local"
+           regionendpoint: "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
            pathstyle: true
            region: ${ARGOCD_ENV_cloud_region}
            accesskey: {{.username}}
